# meridian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  (+3 more)
docs/: architecture.md  command-reference.md  getting-started.md
prompts/: architect.md  code-quality-reviewer.md  context-gatherer.md  implementer.md  pm.md  qa.md  research-phase.md  resume-template.md  security.md  spec-reviewer.md  ux.md
references/: axis-integration.md  board-integration.md  discipline-protocols.md  nero-integration.md  remote-agent.md  state-machine.md
scripts/: ai_phase.py  analyze_deps.py  audit.py  auto_learn.py  autonomous.py  axis_sync.py  backlog.py  cli.py  codebase_mapping.py  context_awareness.py  context_bridge.py  context_window.py  coverage_audit.py  cross_review.py  db.py  debug_kb.py  discuss_phase.py  discussion.py  dispatch.py  executor_modes.py  export.py  extract_learnings.py  fast.py  forensics.py  format.py  freeze.py  gap_closure.py  gates.py  generate_commands.py  handoff.py  health.py  html_dashboard.py  learnings.py  logging_config.py  mcp_discovery.py  metrics.py  milestone_lifecycle.py  model_profiles.py  next_action.py  node_repair.py  (+29 more)
tasks/: completed.md  todo.md  v1.4-plan.md
templates/: api-service.json  cli-tool.json  library.json
tests/: conftest.py  test_analyze_deps.py  test_audit.py  test_auto_learn.py  test_autonomous.py  test_axis_sync.py  test_backlog.py  test_board_integration.py  test_board_migration.py  test_board_provider.py  test_board_sync.py  test_cli.py  test_codebase_mapping.py  test_context_awareness.py  test_context_bridge.py  test_context_window.py  test_coverage_audit.py  test_cross_review.py  test_db.py  test_db_safety.py  test_debug_kb.py  test_deep_discovery.py  test_discuss_phase.py  test_discussion.py  test_dispatch.py  test_executor_modes.py  test_export.py  test_extract_learnings.py  test_fast.py  test_forensics.py  test_format.py  test_freeze.py  test_gap_closure.py  test_gates.py  test_generate_commands.py  test_handoff.py  test_health.py  test_html_dashboard.py  test_learnings.py  test_logging_config.py  (+27 more)
(+146 files in other folders)
